syntax = "proto3";

option go_package = "/genproto";

package user;

service UserService {
    rpc GetUser(UserId) returns (User) {}
    rpc UpdateUser(UserId) returns (Status) {}
    rpc DeleteUser(UserId) returns (Status) {}
    rpc GetUserProfile(UserId) returns (UserProfile) {}
    rpc UpdateUserProfile(UserId) returns (Status) {}
}

message UserId {
    string UserId = 1;
}

message User {
    UserId userId       = 1;
    string username     = 2;
    string email        = 3;
    string passwordHash = 4;
    string createdAt    = 5;
    string deletedAt    = 6;
}

message UserProfile {
    UserId userId    = 1;
    string fullName  = 2;
    string bio       = 3;
    string location  = 4;
    string avatarUrl = 5;
}

message Status {
    bool status = 1;
}